<resources>
    <string name="app_name" translatable="false">Pilleriappi 1.0</string>
    <string name="selectedlanguage">ENGLISH</string>
    <string name="language">ENGLISH</string>
    <string name="title_home" translatable="false"> </string>
    <string name="secondary_title_home">"Welcome, "</string>
    <string name="add_title" translatable="false"> </string>
    <string name="add_secondary_title">Add</string>
    <string name="add_medicine_name">Medicine name</string>
    <string name="add_date">Date of taking the medicine</string>
    <string name="add_hour">Hour of taking the medicine</string>
    <string name="add_button">Add medicine</string>
    <string name="add_frequency_once_a_week">Once a week</string>
    <string name="add_frequency_once_a_day">Once a day</string>
    <string name="add_frequency_once">Just once</string>
    <string name="add_frequency">How frequetly medicine needs to be taken</string>
    <string name="add_sycle">How often medicine needs to be taken</string>
    <string name="add_medicine_addded">Medicine has been added.</string>
    <string name="title_settings" translatable="false"> </string>
    <string name="secondary_title_settings">Settings</string>
    <string name="secondary_title_start">Start</string>
    <string name="notification_channel_name">Medicine reminder</string>
    <string name="notification_channel_description">When you set new medicine to Pilleriappi, and your notification settings are on both android system and Pilleriappi turned on. App will alarm you  when it\'s time to take medicine</string>
    <string name="notification_title">Medicine alarm</string>
    <string name="notification_text_content">Your medicine taking time is now</string>
    <string name="settings_firstname">Who should I call you?</string>
    <string name="app_continue">Continue</string>
    <string name="notifications">Medicine notifications</string>
    <string name="change_language">Change Language</string>
    <string name="credits_button">Credits</string>
    <string name="empty_case">      </string>
    <string name="tomi_jumppanen">Tomi Jumppanen</string>
    <string name="valtteri_rautauoma">Valtteri Rautauoma</string>
    <string name="andy_vaan">Andreas Lang</string>
    <string name="your_medicines">Your medicines</string>
    <string name="list_medicine_empty">To list medicines you need to first add them</string>
    <string name="medicine">Medicine</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

</resources>