<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_start">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fi.mobsit.pilleriappi10.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fi.mobsit.pilleriappi10.ui.add.addFragment"
        android:label="@string/add_secondary_title"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="fi.mobsit.pilleriappi10.ui.settings.settingsFragment"
        android:label="@string/secondary_title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_start"
        android:name="fi.mobsit.pilleriappi10.ui.start.startFragment"
        android:label="@string/secondary_title_start"
        tools:layout="@layout/fragment_start" />
</navigation>